# cs7150lib

./: README.md  by-hand-1d-convolution.ipynb  setup.cfg
cs7150/: __init__.py  convwidget.py  losswidget.py  mlpwidget.py  mpneuron.py  seed.py  window.py
notebooks/: GloVE-demo.ipynb  LearningAFourLayerPerceptron.ipynb  MidtermPost.ipynb  VisualizingConvolutionalNetworks.ipynb  ZigZagScenario.ipynb  by-hand-1d-convolution.ipynb
