[metadata]
name = cs7150lib
version = 0.0.1
author = David Bau
author_email = david.bau@gmail.com
description = python library for CS7150 deep learning classes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davidbau/cs7150lib
project_urls =
    Bug Tracker = https://github.com/davidbau/cs7150lib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    cs7150 = cs7150
packages = cs7150
python_requires = >=3.7
install_requires =
    numpy
    torch
    torchvision
    matplotlib>=3.5
    baukit @ git+https://github.com/davidbau/baukit@main
